--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,22 +10,40 @@
     <div class="container dashboard-container">
         <header class="dashboard-header">
             <div>
-                <h1>👤 Panel Użytkownika</h1>
+                <h1>🚗 Panel Kierowcy</h1>
                 <p class="subtitle" id="user-name">Witaj!</p>
             </div>
             <button id="logout-btn" class="btn-secondary">Wyloguj</button>
         </header>
 
-        <div class="tabs">
-            <button class="tab-btn active" data-tab="czas-pracy">⏰ Czas Pracy</button>
-            <button class="tab-btn" data-tab="urlopy">🏖️ Urlopy</button>
-            <button class="tab-btn" data-tab="plan">📅 Plan</button>
+        <div class="dashboard-tiles">
+            <div class="tile" data-section="plan">
+                <div class="tile-icon">📅</div>
+                <h2>Plan</h2>
+                <p>Zarządzaj swoim planem pracy</p>
+                <div class="tile-count" id="plan-count">0</div>
+            </div>
+            <div class="tile" data-section="urlopy">
+                <div class="tile-icon">🏖️</div>
+                <h2>Urlopy</h2>
+                <p>Składaj wnioski urlopowe</p>
+                <div class="tile-count" id="urlopy-count">0</div>
+            </div>
+            <div class="tile" data-section="czas-pracy">
+                <div class="tile-icon">⏰</div>
+                <h2>Czas Pracy</h2>
+                <p>Rejestruj czas pracy</p>
+                <div class="tile-count" id="czas-pracy-count">0</div>
+            </div>
         </div>
 
         <!-- Czas Pracy -->
-        <div id="czas-pracy-tab" class="tab-content active">
+        <div id="czas-pracy-tab" class="tab-content" style="display: none;">
             <div class="section-header">
-                <h2>Czas Pracy</h2>
+                <div>
+                    <button id="back-czas-pracy" class="btn-back">← Powrót</button>
+                    <h2>Czas Pracy</h2>
+                </div>
                 <button id="add-czas-pracy-btn" class="btn-primary-small">+ Dodaj</button>
             </div>
 
@@ -62,9 +80,12 @@
         </div>
 
         <!-- Urlopy -->
-        <div id="urlopy-tab" class="tab-content">
+        <div id="urlopy-tab" class="tab-content" style="display: none;">
             <div class="section-header">
-                <h2>Urlopy</h2>
+                <div>
+                    <button id="back-urlopy" class="btn-back">← Powrót</button>
+                    <h2>Urlopy</h2>
+                </div>
                 <button id="add-urlop-btn" class="btn-primary-small">+ Dodaj</button>
             </div>
 
@@ -107,9 +128,12 @@
         </div>
 
         <!-- Plan -->
-        <div id="plan-tab" class="tab-content">
+        <div id="plan-tab" class="tab-content" style="display: none;">
             <div class="section-header">
-                <h2>Plan</h2>
+                <div>
+                    <button id="back-plan" class="btn-back">← Powrót</button>
+                    <h2>Plan</h2>
+                </div>
                 <button id="add-plan-btn" class="btn-primary-small">+ Dodaj</button>
             </div>
 
