--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -44,26 +44,37 @@
                     <button id="back-czas-pracy" class="btn-back">← Powrót</button>
                     <h2>Czas Pracy</h2>
                 </div>
+                <button id="add-czas-pracy-btn" class="btn-primary-small">+ Dodaj</button>
             </div>
 
-            <div class="upload-section">
-                <div class="upload-container">
-                    <input type="file" id="excel-file-input" accept=".xlsx,.xls" style="display: none;">
-                    <label for="excel-file-input" class="upload-label">
-                        <div class="upload-icon">📊</div>
-                        <div class="upload-text">
-                            <strong>Wgraj plik Excel</strong>
-                            <span>Kliknij, aby wybrać plik .xlsx lub .xls</span>
+            <div id="czas-pracy-form-container" class="form-container" style="display: none;">
+                <form id="czas-pracy-form" class="data-form">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="czas-data">Data *</label>
+                            <input type="date" id="czas-data" name="data" required>
                         </div>
-                    </label>
-                    <div id="file-name" class="file-name" style="display: none;"></div>
-                    <button id="upload-excel-btn" class="btn-primary" style="display: none; margin-top: 15px;">
-                        Przetwórz plik
-                    </button>
-                </div>
+                        <div class="form-group">
+                            <label for="czas-start">Rozpoczęcie *</label>
+                            <input type="time" id="czas-start" name="start" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="czas-koniec">Zakończenie *</label>
+                            <input type="time" id="czas-koniec" name="koniec" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="czas-opis">Opis</label>
+                        <textarea id="czas-opis" name="opis" rows="3"></textarea>
+                    </div>
+                    <div class="form-actions">
+                        <button type="submit" class="btn-primary">Zapisz</button>
+                        <button type="button" class="btn-secondary" id="cancel-czas-pracy">Anuluj</button>
+                    </div>
+                </form>
             </div>
 
-            <div id="czas-pracy-list" class="data-list" style="margin-top: 30px;">
+            <div id="czas-pracy-list" class="data-list">
                 <div class="loading">Ładowanie...</div>
             </div>
         </div>
